crates/vize_atelier_dom/tests/snapshots/integration__dom_snapshot__v_bind__merge_static_and_dynamic_class_with_vbind_object.snap
---
source: crates/vize_atelier_dom/tests/dom_snapshot.rs
expression: "get_compiled(r#\"<input v-bind=\"attrs\" class=\"base\" :class=\"stateClass\" />\"#)"
---
const { mergeProps: _mergeProps, openBlock: _openBlock, createElementBlock: _createElementBlock } = Vue

function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("input", _mergeProps(attrs, {
    class: ["base", stateClass]
  }), null, 16 /* FULL_PROPS */))
}
